<resources>
    <string name="app_name">Coachat</string>
    <string name="nav_header_title">Coachat</string>
    <string name="nav_header_subtitle">coachat@jeisfeld.de</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="notification_channel_name">Coachat</string>
    <string name="notification_channel_description">Messages from Coachat</string>
    <string name="notification_title">Message from %1$s</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_dialog_confirmation">Confirmation</string>
    <string name="title_dialog_confirm_deletion">Confirm deletion</string>
    <string name="title_dialog_edit_contact">Edit Contact</string>
    <string name="title_dialog_info">Info</string>
    <string name="title_dialog_edit_device">Edit Device</string>
    <string name="title_dialog_edit_conversation">Edit Conversation</string>

    <string name="menu_account">Account</string>
    <string name="menu_conversations">Conversations</string>
    <string name="menu_lut">LUT</string>
    <string name="menu_settings">Settings</string>

    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_acknowledge">Acknowledge</string>
    <string name="button_send">Send</string>
    <string name="button_send_prio">Send with priority</string>
    <string name="button_create_account">Create account</string>
    <string name="button_login">Login</string>
    <string name="button_create_invitation">Create Invitation</string>
    <string name="button_accept_invitation">Accept Invitation</string>
    <string name="button_review_invitation">Review Invitation</string>
    <string name="button_create_invitation_short">Create Invitation</string>
    <string name="button_accept_invitation_short">Accept Invitation</string>
    <string name="button_review_invitation_short">Review Invitation</string>
    <string name="button_logout">Logout</string>
    <string name="button_change_password">Change Password</string>
    <string name="button_delete_contact">Delete Contact</string>
    <string name="button_delete_conversation">Delete Conversation</string>
    <string name="button_update_contact">Update Contact</string>
    <string name="button_disconnect_device">Disconnect Device</string>
    <string name="button_update_device">Update Device</string>
    <string name="button_update_conversation">Update</string>
    <string name="button_trigger_lut">Send Pulse</string>

    <string name="text_send_message">Send Message</string>
    <string name="text_send_message_to">%1$s</string>
    <string name="text_select_conversation">Select Conversation</string>
    <string name="text_message_from">%1$s</string>
    <string name="text_subject">%1$s</string>
    <string name="text_display_random_image">Display RandomImage</string>
    <string name="text_trigger_lut">Trigger Lob &amp; Tadel</string>
    <string name="text_message_text">Message Text</string>
    <string name="hint_message_text">New message…</string>
    <string name="text_vibrate">Vibrate</string>
    <string name="text_repeat_vibration">Repeat Vibration</string>
    <string name="text_vibration_pattern">Vibration Pattern</string>
    <string name="text_display_on_lock_screen">Display when Locked</string>
    <string name="text_lock_message">Pin the message</string>
    <string name="text_keep_screen_on">Keep screen on</string>
    <string name="text_device">Device</string>
    <string name="text_origin">Origin</string>
    <string name="text_origin_widget">Widget</string>
    <string name="text_origin_notification">Notification</string>
    <string name="text_notification_name">Notification Name</string>
    <string name="text_widget_name">Widget Name</string>
    <string name="text_message_display_normal">Normal message display</string>
    <string name="text_message_display_urgent">Urgent message display</string>
    <string name="text_message_display_type">Display Type</string>
    <string name="text_slave_permissions">Slave permissions</string>
    <string name="text_ai_settings">AI Settings</string>
    <string name="text_edit_slave_permissions">Edit slave permissions</string>
    <string name="text_edit_relation">Edit contact name / delete contact</string>
    <string name="text_manage_conversations">Manage conversations</string>
    <string name="text_default_reply_policy">Default reply policy</string>
    <string name="text_reply_policy">Reply policy</string>
    <string name="text_subject_name">Subject</string>
    <string name="text_timeout_duration">Timeout</string>

    <string name="text_my_account">My Account</string>
    <string name="text_username">Username</string>
    <string name="text_username_m">Username *</string>
    <string name="text_password">Password *</string>
    <string name="text_repeat_password">Repeat Password *</string>
    <string name="text_old_password">Old Password *</string>
    <string name="text_new_password">New Password *</string>
    <string name="text_connected_accounts">Connected Accounts</string>
    <string name="text_my_role">My Role</string>
    <string name="text_my_name">My Name</string>
    <string name="text_my_name_m">My Name *</string>
    <string name="text_contact_name">Contact Name *</string>
    <string name="text_contact">Contact</string>
    <string name="text_my_name_for_ai">My Name for AI</string>
    <string name="text_ai_behavior">AI Behavior</string>
    <string name="text_ai_type">AI Type</string>
    <string name="text_ai_message_suffix">Message Suffix</string>
    <string name="text_ai_timeout">Send message after timeout</string>
    <string name="text_device_name">Device Name *</string>
    <string name="text_sub">Sub</string>
    <string name="text_dom">Dom</string>
    <string name="text_client">Client</string>
    <string name="text_coach">Coach</string>
    <string name="text_connection_code">Connection Code</string>
    <string name="text_my_devices">My Devices</string>
    <string name="text_my_doms">My Doms</string>
    <string name="text_my_subs">My Subs</string>
    <string name="text_my_coaches">My Coaches</string>
    <string name="text_my_clients">My Clients</string>
    <string name="text_delete">Delete</string>
    <string name="text_edit">Edit</string>
    <string name="text_pending">Pending</string>
    <string name="text_confirmed">Confirmed</string>
    <string name="text_refresh">Refresh</string>
    <string name="text_speak">Speak</string>
    <string name="text_stop_speaking">Stop speaking</string>
    <string name="text_voice_recording">Voice Recording</string>
    <string name="text_archive">Archive</string>
    <string name="text_subject_invitation">Invitation to Coachat</string>
    <string name="text_sending_message">Sending message…</string>
    <string name="text_message_sent">Message sent</string>
    <string name="text_message_received">Message received</string>
    <string name="text_message_acknowledged">Message acknowledged</string>
    <string name="text_new_conversation_name">New conversation</string>
    <string name="text_new_dummy_conversation">%1$s sends you a reminder</string>
    <string name="text_automatic_message">Automatic Message</string>

    <string name="error_missing_username">Missing username</string>
    <string name="error_passwords_do_not_match">Passwords do not match</string>
    <string name="error_password_too_short">Password must have min 8 characters</string>
    <string name="error_technical_error">Technical error</string>
    <string name="error_wrong_old_password">Wrong old password</string>
    <string name="error_missing_ownname">Missing own name</string>
    <string name="error_missing_contactname">Missing contact name</string>
    <string name="error_timeout_daily_out_of_range">Daily timeout must be between 0 and 24.</string>
    <string name="error_missing_connectioncode">Missing connection code</string>
    <string name="error_missing_devicename">Missing device name</string>
    <string name="error_missing_subject">Missing subject</string>
    <string name="error_invalid_connectioncode">Invalid connection code</string>
    <string name="error_invalid_credentials">Username or Password is not correct</string>
    <string name="error_connection_failed">Connection failed</string>
    <string name="error_missing_privilege">Missing privileges</string>
    <string name="error_user_already_exists">User %1$s already exists</string>
    <string name="error_user_already_logged_in">User %1$s is already logged in on another device. You may add this device as additional device.</string>
    <string name="error_device_already_exists">Device %1$s is already connected for this user</string>

    <string name="dialog_screen_control_permission">In the following screen, please give the app %1$s permission to make displays on top of other apps.</string>
    <string name="dialog_login_before_connect">Please login before connecting to another user.</string>
    <string name="dialog_confirm_delete_contact">Do you really want to delete contact %1$s?</string>
    <string name="dialog_confirm_disconnect_device">Do you really want to dicsonnect device %1$s?</string>
    <string name="dialog_confirm_delete_conversation">Do you really want to delete conversation %1$s?</string>

    <string name="toast_error_when_sending">Error when sending message: %1$s</string>

    <string-array name="array_vibrate_pattern_names">
        <item>Default</item>
        <item>Decrease</item>
        <item>Wave</item>
        <item>Slow Increase</item>
    </string-array>

    <string-array name="array_message_display_types">
        <item>Action</item>
        <item>Notification</item>
    </string-array>


    <string-array name="array_ai_policies">
        <item>none</item>
        <item>manual</item>
        <item>automatic live</item>
        <item>automatic</item>
        <item>manual live</item>
    </string-array>

    <string-array name="array_reply_policies">
        <item>Unlimited responses</item>
        <item>Only acknowledgement</item>
        <item>Only one response</item>
        <item>Ack and one response</item>
    </string-array>

    <string-array name="array_notification_names">
        <item>Special</item>
    </string-array>

    <string-array name="array_widget_names">
        <item>SchnurpSy</item>
    </string-array>
</resources>