<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/page_padding"
        tools:context=".main.account.AccountFragment">

        <TextView
            android:id="@+id/text_my_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:text="@string/text_my_account"
            android:textSize="@dimen/text_xlarge" />

        <TableLayout
            android:id="@+id/table_my_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_my_account">

            <TableRow
                android:id="@+id/tableRowUsername"
                android:layout_height="@dimen/input_row_height"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:minHeight="@dimen/input_row_height">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_weight="@integer/selector_label_width"
                    android:text="@string/text_username"
                    android:textSize="@dimen/text_normal" />

                <TextView
                    android:id="@+id/textViewUsername"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_weight="@integer/selector_input_width"
                    android:gravity="center_vertical|start"
                    android:textSize="@dimen/text_normal" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRowButtonsLogin"
                android:layout_height="@dimen/input_row_height"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:minHeight="@dimen/input_row_height">

                <Button
                    android:id="@+id/button_create_account"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/input_row_height"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_weight="2"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/button_create_account"
                    android:textSize="@dimen/text_normal" />

                <Button
                    android:id="@+id/button_login"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/input_row_height"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/button_login"
                    android:textSize="@dimen/text_normal" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRowButtonsLogout"
                android:layout_height="@dimen/input_row_height"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:minHeight="@dimen/input_row_height">

                <Button
                    android:id="@+id/button_change_password"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/input_row_height"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_weight="2"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/button_change_password"
                    android:textSize="@dimen/text_normal" />

                <Button
                    android:id="@+id/button_logout"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/input_row_height"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/button_logout"
                    android:textSize="@dimen/text_normal" />

            </TableRow>
        </TableLayout>

        <LinearLayout
            android:id="@+id/layoutMyDevices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/text_my_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/text_my_devices"
                android:textSize="@dimen/text_xlarge" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_connected_accounts"
                android:textSize="@dimen/text_xlarge"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageButton
                android:id="@+id/imageViewRefreshContacts"
                android:layout_width="@dimen/input_row_height"
                android:layout_height="@dimen/input_row_height"
                android:contentDescription="@string/text_refresh"
                android:src="@drawable/ic_icon_refresh"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/layoutMyDoms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/text_my_doms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/text_my_coaches"
                android:textSize="@dimen/text_large" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutMySubs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/text_my_subs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/text_my_clients"
                android:textSize="@dimen/text_large" />

        </LinearLayout>

        <Button
            android:id="@+id/button_create_invitation"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/input_row_height"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginStart="@dimen/margin_small"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/button_create_invitation"
            android:textSize="@dimen/text_normal" />

        <Button
            android:id="@+id/button_accept_invitation"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/input_row_height"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginStart="@dimen/margin_small"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/button_accept_invitation"
            android:textSize="@dimen/text_normal" />
    </LinearLayout>
</ScrollView>