<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="?attr/dialogPreferredPadding"
        android:paddingTop="?attr/dialogPreferredPadding"
        android:paddingEnd="?attr/dialogPreferredPadding"
        android:paddingBottom="?attr/dialogPreferredPadding">

        <LinearLayout
            android:id="@+id/layout_contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextMyName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_row_height"
                    android:hint="@string/text_my_name_m"
                    android:inputType="text"
                    android:padding="0dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextContactName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_row_height"
                    android:hint="@string/text_contact_name"
                    android:inputType="text"
                    android:padding="0dp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_slave_permissions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/layout_contact_name">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/text_slave_permissions"
                android:textSize="@dimen/text_large" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkboxEditSlavePermissions"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_row_height_small"
                android:text="@string/text_edit_slave_permissions" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkboxEditRelation"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_row_height_small"
                android:text="@string/text_edit_relation" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkboxManageConversations"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_row_height_small"
                android:text="@string/text_manage_conversations" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <AutoCompleteTextView
                    android:id="@+id/dropdownDefaultReplyPolicy"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_row_height_small"
                    android:hint="@string/text_default_reply_policy"
                    android:inputType="none"
                    android:padding="0dp"
                    android:textSize="@dimen/text_normal" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_ai_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/layout_slave_permissions">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/text_ai_settings"
                android:textSize="@dimen/text_large" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextAiUsername"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_row_height"
                    android:hint="@string/text_my_name_for_ai"
                    android:inputType="text"
                    android:padding="0dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:orientation="horizontal">

                <AutoCompleteTextView
                    android:id="@+id/dropdownAiPolicy"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_row_height_small"
                    android:hint="@string/text_ai_behavior"
                    android:inputType="none"
                    android:padding="0dp"
                    android:textSize="@dimen/text_normal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextAiPrimingId"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_row_height"
                    android:hint="@string/text_ai_type"
                    android:inputType="number"
                    android:padding="0dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextAiMessageSuffix"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_ai_message_suffix"
                    android:inputType="textMultiLine"
                    android:maxLines="40"
                    android:minHeight="@dimen/input_row_height"
                    android:minLines="1"
                    android:padding="0dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkboxAiTimeout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_row_height_small"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/text_ai_timeout" />

            <LinearLayout
                android:id="@+id/layoutAiTimeoutValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextAiTimeoutValue"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_row_height"
                        android:hint="@string/text_timeout_duration"
                        android:inputType="number"
                        android:padding="0dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <AutoCompleteTextView
                        android:id="@+id/dropdownAiTimeoutUnit"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_row_height"
                        android:layout_margin="0dp"
                        android:inputType="text"
                        android:padding="0dp"
                        android:textSize="@dimen/text_normal" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textViewErrorMessage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical|start"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_weight="@integer/selector_input_width"
            android:gravity="center_vertical|start"
            android:minHeight="@dimen/input_row_height"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/text_normal"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/layout_ai_settings" />

        <Button
            android:id="@+id/button_update_contact"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:paddingStart="@dimen/margin_small"
            android:paddingEnd="@dimen/margin_small"
            android:text="@string/button_update_contact"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewErrorMessage" />

        <Button
            android:id="@+id/button_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:paddingStart="@dimen/margin_small"
            android:paddingEnd="@dimen/margin_small"
            android:text="@string/button_cancel"
            app:layout_constraintEnd_toStartOf="@id/button_update_contact"
            app:layout_constraintTop_toBottomOf="@id/textViewErrorMessage" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
